--- a/NoticeBoardV3/Content/Site.css
+++ b/NoticeBoardV3/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 92px;
     padding-bottom: 20px;
 }
 
@@ -21,4 +21,12 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.navbar-logo{
+    padding-top: 15px;
+}
+
+.navbar-nav {
+    padding-top: 10px;
 }
