--- a/NoticeBoardV3/Content/bootstrap.css
+++ b/NoticeBoardV3/Content/bootstrap.css
@@ -4501,8 +4501,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+    /*background-color: #222222;
+  border-color: #080808;*/
+    background-image: url('Images/NB Header.png');
 }
 
 .navbar-inverse .navbar-brand {
