--- a/NoticeBoardV3/Views/Shared/_Layout.cshtml
+++ b/NoticeBoardV3/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Noticeboard", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <div class="navbar-logo"><a href="/Home/Index"><img src="~/Content/Images/NoticeBoard_Logo.png" /></a></div>
+                @*@Html.ActionLink("Noticeboard", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
