--- a/NoticeBoardV3/Views/Account/Register.cshtml
+++ b/NoticeBoardV3/Views/Account/Register.cshtml
@@ -18,11 +18,37 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Location, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Location, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Gender, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Gender, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.DateOfBirth, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <input type="date" name="DateOfBirth" id="DateOfBirth" />
+            @Html.
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -44,4 +70,9 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    // Turn the DateOfBirth input into a jquery datepicker, with a max date of today
+    $(document).ready(function () (
+    $("#DateOfBirth").datepicker({maxDate: '0'});  // http://api.jqueryui.com/datepicker/#option-maxDate
+    ));
+
 }
