--- a/NoticeBoardV3/Views/Account/Register.cshtml
+++ b/NoticeBoardV3/Views/Account/Register.cshtml
@@ -45,7 +45,6 @@
         @Html.LabelFor(m => m.DateOfBirth, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             <input type="date" name="DateOfBirth" id="DateOfBirth" />
-            @Html.
         </div>
     </div>
 
@@ -67,12 +66,13 @@
         </div>
     </div>
 }
-
+    <script type="text/javascript">
+    // Turn the DateOfBirth input into a jquery datepicker, with a max date of today
+    $(document).ready(function () {
+        $("#DateOfBirth").datepicker({ maxDate: '0' });  // http://api.jqueryui.com/datepicker/#option-maxDate
+    });
+    </script>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    // Turn the DateOfBirth input into a jquery datepicker, with a max date of today
-    $(document).ready(function () (
-    $("#DateOfBirth").datepicker({maxDate: '0'});  // http://api.jqueryui.com/datepicker/#option-maxDate
-    ));
-
+    
 }
