bug fix: Changed the jquery-dateofbirth-datepicker format to dd/mm/yy (using yyyy showed two years concatenated). Added changeMonth value as true, added year range for up to 100 years in the past. Added placeholder to jquery-dateofbirth-datepicker in Register.cshtml

--- a/NoticeBoardV3/Views/Account/Register.cshtml
+++ b/NoticeBoardV3/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.DateOfBirth, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            <input type="text" id="jquery-dateofbirth-datepicker" /> 
+            <input type="text" id="jquery-dateofbirth-datepicker" placeholder="dd/mm/yyyy"/> 
         </div>
     </div>
 
